[package]
name = "snesemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0.2"

[profile.release]
opt-level = 3
strip = "debuginfo"

[profile.dev]
opt-level = 0


[profile.test]
opt-level = 0
